force-app/main/default/objects/B25__Group_Membership__c/B25__Group_Membership__c.object-meta.xml
<CustomObject>
    <description>A junction object linking multiple Users and Contacts to multiple Groups.</description>
    <label>Group Membership</label>
    <nameField>
        <displayFormat>GM-{000000000}</displayFormat>
        <label>Group Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>