force-app/main/default/objects/B25__Group_Membership__c/fields/B25__Contact__c.field-meta.xml
<CustomField>
    <fullName>B25__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A Contact that is member of a Group.</description>
    <inlineHelpText>Un contact qui est membre d’un groupe.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Group Memberships</relationshipLabel>
    <relationshipName>Group_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>