force-app/main/default/objects/B25__Group_Membership__c/fields/B25__Group__c.field-meta.xml
<CustomField>
    <fullName>B25__Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Group of which Users and Contacts are members.</description>
    <inlineHelpText>Le groupe dont les utilisateurs et les contacts sont membres.</inlineHelpText>
    <label>Group</label>
    <referenceTo>B25__Group__c</referenceTo>
    <relationshipLabel>Group Memberships</relationshipLabel>
    <relationshipName>Group_Memberships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>