force-app/main/default/objects/B25__Group_Membership__c/fields/B25__User__c.field-meta.xml
<CustomField>
    <fullName>B25__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A User that is member of a Group.</description>
    <inlineHelpText>Un utilisateur qui est membre d’un groupe.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Group_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>